@@ -1,3 +1,9 @@
+2002-11-15  DJ Delorie  <dj@redhat.com>
+
+	* xstormy16-desc.c: Regenerate.
+	* xstormy16-opc.c: Regenerate.
+	* xstormy16-opc.h: Regenerate.
+	
 2002-11-18  Klee Dienes  <kdienes@apple.com>
 
 	* avr-dis.c: Include libiberty.h (for xmalloc).
